# libclipboard

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  clipboard_win32.c  index.html  libclipboard.def  libclipboard.h  params.json
include/: libclipboard.h
samples/: clipboard_sample1.c
src/: clipboard_cocoa.c  clipboard_common.c  clipboard_win32.c  clipboard_x11.c
test/: CMakeLists.txt  clipboard_test.c  libclipboard-test-private.h  smoke_test1.c  test_basics.cpp  test_custom_allocators.cpp
